--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
-APP_NAME=Laravel
+APP_NAME=hoangvan149dhv
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:AL/qTLOxoyMUioDEiIj/FUBwSYG/LhnU7RRjyYzpmCI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=chat
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD="root"
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -37,9 +37,9 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=websocketapp
+PUSHER_APP_KEY=websocketkey
+PUSHER_APP_SECRET=websocketsecret
 PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
